# zonkey

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md
interpreter/: Cargo.toml
interpreter/assets/: guessing_game.zonk  home.zonk  installer.zonk  phone_book.zonk  settings.zonk
interpreter/assets/calculator/: Calculator.desktop  Calculator.lnk  app.zonk  rocks-sambowden-Calculator.desktop
interpreter/assets/documentation/: a_more_advanced_page.zonk  classes.zonk  creating_running_first_script.zonk  creating_your_first_page.zonk  functions.zonk  grammar.zonk  index.zonk  learning_language.zonk  standard_prelude.zonk  variables_types_and_expressions.zonk
interpreter/assets/documentation/learning_scripts/: arrays.zonk  class.zonk  first_page.zonk  greet_me.zonk  loops.zonk  var_exp_assign.zonk
interpreter/assets/guessing_game/: Guessing Game.desktop  Guessing Game.lnk  GuessingGame.desktop  app.zonk  rocks-sambowden-GuessingGame.desktop
interpreter/src/: address.rs  ast.rs  debugger.rs  element.rs  event.rs  expr.rs  lexer.rs  lib.rs  permission.rs  stmt.rs  token.rs
interpreter/src/address/: mod.rs
interpreter/src/err/: err_reporter.rs  lexer.rs  mod.rs  parser.rs  tree_walker.rs
interpreter/src/err/handler/: err_reporter.rs  lexer.rs  mod.rs  parser.rs  tree_walker.rs
interpreter/src/lexer/: err.rs  mod.rs
interpreter/src/parser/: declaration.rs  err.rs  location.rs  mod.rs  value.rs
interpreter/src/parser/production/: mod.rs  prelude.rs
interpreter/src/resource_loader/: mod.rs
interpreter/src/standard_prelude/: calls.rs  functions.rs
interpreter/src/standard_prelude/classes/: array.rs  button.rs  column.rs  hyperlink.rs  image.rs  input.rs  mod.rs  page.rs  prelude.rs  row.rs  text.rs
interpreter/src/tests/: mod.rs
interpreter/src/tests/expected_err_msg/: array_empty_type.txt  array_ex_comma_or_end.txt  array_type_not_closed.txt  array_value_wrong_type.txt  ass_op_inv_for_type.txt  ass_op_types_not_matching.txt  bad_if.txt  block_ex_left_brace.txt  block_ex_right_brace.txt  call_ex_comma_right_paren.txt  call_inc_arg_num.txt  call_inc_arg_type.txt  call_not_found.txt  class_dec_ex_left_brace.txt  class_dec_ex_mthd_name.txt  class_dec_ex_name.txt  class_dec_ex_prop_name.txt  class_dec_ex_right_brace.txt  class_dec_no_con.txt  class_dec_prop_not_top.txt  class_dec_redec_con.txt  class_dec_redec_prop.txt  class_dec_unterm_prop.txt  class_not_declared.txt  comp_inv_for_type.txt  comp_types_not_matching.txt  dec_out_global.txt  (+50 more)
interpreter/src/tree_walker/: environment.rs  err.rs  mod.rs  object.rs  state.rs
source/: Cargo.toml
source/default-profile/: calculator.zonk  counter.zonk  guessing_game.zonk  home.zonk  news.zonk  script_error.zonk  settings.zonk
source/default-profile/calculator/: app.zonk
source/default-profile/example_scripts/: benchmark.zonk  fibonacci_sequence.zonk  input_integer_plus_one.zonk
source/default-profile/news/: article.zonk  home.zonk
source/default-profile/test_scripts/: division_by_zero.zonk  good_casting.zonk  guessing.zonk  long_page.zonk  loop.zonk  unix_shebang_test
source/fuzz-tests/: Cargo.toml
source/installer/src/: main.rs
source/integration-tests/: Cargo.toml
source/integration-tests/expected_output/: and_or.txt  bad_casting.txt
source/integration-tests/scripts/: add_remove_el.zonk  add_remove_el_row_col.zonk  multiple_errors.zonk  no_value_returned.zonk  recursive_function.zonk  sleep.zonk
source/integration-tests/tests/: test_scripts.rs
source/interpreter/: Cargo.toml
source/interpreter/src/: element.rs  expr.rs  lexer.rs  lib.rs  stmt.rs  token.rs
source/resource-loader/: Cargo.toml
source/resource-loader/src/: lib.rs  load_address_err.rs  new_address_err.rs
source/tab/: Cargo.toml
source/tab/src/: lib.rs  message.rs  subscription_state.rs
source/ui/: Cargo.toml
source/ui/src/: element.rs  event.rs  lib.rs  style.rs
source/zonkey/: Cargo.toml
source/zonkey-browser/: Cargo.toml
source/zonkey-browser/src/: control_bar.rs  main.rs  message.rs  tab_bar.rs
source/zonkey/src/: main.rs  window.rs
zonkey/: Cargo.toml
zonkey/src/: main.rs  window.rs
zonkey/src/page_viewer/: message.rs  mod.rs  update.rs  view.rs
zonkey/src/tab/: message.rs  mod.rs  page_builder.rs
zonkey/src/window/: control_bar.rs  message.rs  mod.rs
zonkey/tests/: test_scripts.rs
zonkey/tests/expected_output/: complex_expressions.txt  divide_by_zero.txt  fibonacci.txt  get_request.txt  good_casting.txt  post_request.txt  read_and_write_file.txt  string_to_integer_cast_failed.txt
zonkey/tests/scripts/: add_remove_el_page.zonk  args.zonk  factorial.zonk  learning_arrays.zonk  method_chain.zonk  native_object_array.zonk  nested_subexpr_scope_limit.zonk  post_request.zonk  read_and_write_file.zonk  string_array.zonk  string_to_integer_cast_failed.zonk
zonkey/wix/: main.wxs
zonkey_source/zonkey/: Cargo.toml
zonkey_source/zonkey-browser/: Cargo.toml
zonkey_source/zonkey-browser/src/: app.rs  main.rs  message.rs
zonkey_source/zonkey/src/: main.rs  shell.rs
(+566 files in other folders)
