[workspace]

members = [
	"interpreter",
	"zonkey",
	"fuzz-test",
]

resolver = "2"

[profile.release]
strip = true
lto = true
opt-level = 3
panic = "abort"
codegen-units = 1

[profile.dev]
debug-assertions = false

[profile.debug-info]
inherits = "dev"
debug-assertions = true 

[profile.fuzz-testing]
inherits = "dev"
debug-assertions = true 
