[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"
description = "The Interpreter For The Zonkey Programming Language"
authors = ["Sam Bowden"]

[dependencies]
numtoa = "0.2.4"
ryu = "1.0"
rustc-hash = "1.1"
indexmap = "1.9.2"
unicode-segmentation = "1.10.0"
iced = { version = "0.9", features = ["image", "svg", "glow"] }
iced_native = "0.10.1"
colorsys = "0.6.7"
reqwest = { version = "0.11", features = ["blocking"] }
include_dir = "0.7.3"
normalize-line-endings = "0.3.0"