[package]
name = "interpreter"
version = "1.0.2"
edition = "2021"
description = "The Interpreter For The Zonkey Programming Language"
authors = ["Samuel Bowden"]

[dependencies]
numtoa = "0.2.4"
ryu = "1.0"
rustc-hash = "1.1"
unicode-segmentation = "1.10.0"
iced = { version = "0.9", features = ["image", "svg", "glow"] }
iced_native = "0.10.1"
colorsys = "0.6.7"
reqwest = { version = "0.11", features = ["blocking"] }
include_dir = "0.7.3"
directories-next = "2.0.0"
