[package]
name = "zonkey"
version = "0.1.0"
edition = "2021"
description = "The Zonkey Programming Language And Browser."
authors = ["Sam Bowden"]

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
interpreter = { path = "../interpreter" }
non-empty-vec = "0.2.3"

[dev-dependencies]
assert_cmd = "2"

[package.metadata.wix]
name = "Zonkey"