[package]
name = "zonkey"
version = "0.1.0"
edition = "2021"
description = "CLI Interpreter for the Zonkey programming language"
authors = ["Sam Bowden"]

[dependencies]
iced = { version = "0.8", features = ["svg", "image"] }
iced_native = "0.9.1"
interpreter = { path = "../interpreter" }
tab = { path = "../tab" }
