[package]
name = "zonkey-browser"
version = "0.1.0"
edition = "2021"
description = "Browser that run programs written in Zonkey script over the internet"
authors = ["Sam Bowden"]

[dependencies]
iced = { version = "0.8", features = ["svg"] }
interpreter = { path = "../interpreter" }
unicode-segmentation = "1.10.0"
directories = "4.0.1"
